--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="fun_fact.css">
+<link rel="stylesheet" href="index.css">
 <head>
     <meta charset="UTF-8">
     <title > Random fact Generator</title>
@@ -15,6 +15,7 @@
     <button id="newFactBtn">Get New Fact</button>
 
     <!-- Link to external JavaScript file -->
-    <script src="fun_fact.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
+
